Refactor/change routers and lint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,8 @@ build:
     stage: build
     script:
         - docker-compose up --build -d
+    rules:
+        - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    only:
+        - merge_requests
+        - develop
