--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,16 @@
 {
     "extends": "next/core-web-vitals",
+    "plugins": [
+        "simple-import-sort",
+        "import"
+    ],
     "rules": {
         "react-hooks/exhaustive-deps": "off",
-        "import/no-anonymous-default-export": "off"
+        "import/no-anonymous-default-export": "off",
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "import/first": "error",
+        "import/newline-after-import": "error",
+        "import/no-duplicates": "error"
     }
 }
