--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
     nextjs:
-        container_name: nextjs-container
+        container_name: siagro-next-web
         build:
             context: .
             dockerfile: Dockerfile
