--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,30 +7,39 @@
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 
 stages:
-    - build
-    - cleanup
+  - approve
+  - build
+  - cleanup
 
 variables:
-    DOCKER_DRIVER: overlay2
+  DOCKER_DRIVER: overlay2
 
 services:
-    - docker:dind
+  - docker:dind
+
+approve:
+  stage: approve
+  script:
+    - echo "Waiting for approval..."
+  when: manual
+  allow_failure: false
+  only:
+    - merge_requests
+    - develop
 
 build:
-    stage: build
-    script:
-        - docker-compose up --build -d
-    only:
-        - merge_requests
-        - develop
-  rules:
-        - if: $CI_COMMIT_BRANCH == "develop" 
+  stage: build
+  script:
+    - docker-compose up --build -d
+  only:
+    - merge_requests
+    - develop
 
 cleanup:
-    stage: cleanup
-    script:
-        - docker image prune -f
-    when: on_success
-    only:
-        - merge_requests
-        - develop
+  stage: cleanup
+  script:
+    - docker image prune -f
+  when: on_success
+  only:
+    - merge_requests
+    - develop
