refactor(project): :building_construction: change folder name

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
     "conventionalCommits.scopes": [
         "component",
         "page",
-        "build"
+        "build",
+        "project"
     ]
 }
