refactor(project): :recycle: Routers finished into the sidebar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ name: siagro
 services:
     nextjs:
         container_name: siagro-next-web
+        restart: always
         build:
             context: .
             dockerfile: Dockerfile
