--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 name: siagro
 services:
     nextjs:
+        restart: always
         container_name: siagro-next-web
         build:
             context: .
