--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "dependencies": {
         "@hookform/resolvers": "^3.4.2",
         "axios": "^1.6.8",
+        "chart.js": "^4.4.3",
+        "chartjs-plugin-datalabels": "^2.2.0",
+        "date-fns": "^3.6.0",
         "next": "14.2.3",
         "next-auth": "^4.24.7",
         "react": "^18",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18",
         "react-hook-form": "^7.51.5",
         "react-icons": "^5.2.1",
