--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.4.2",
+        "@reduxjs/toolkit": "^2.2.5",
         "axios": "^1.6.8",
         "next": "14.2.3",
         "next-auth": "^4.24.7",
@@ -18,6 +19,8 @@
         "react-dom": "^18",
         "react-hook-form": "^7.51.5",
         "react-icons": "^5.2.1",
+        "react-redux": "^9.1.2",
+        "redux-persist": "^6.0.0",
         "sharp": "^0.33.4",
         "tailwind-merge": "^2.3.0",
         "zod": "^3.23.8"
