--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@hookform/resolvers": "^3.4.2",
         "@reduxjs/toolkit": "^2.2.5",
+        "@tanstack/react-query": "^5.48.0",
         "axios": "^1.6.8",
         "chart.js": "^4.4.3",
         "chartjs-plugin-datalabels": "^2.2.0",
